--- a/CyclopsCloakingMod_SN/CyclopsCloakingMod_SN.csproj
+++ b/CyclopsCloakingMod_SN/CyclopsCloakingMod_SN.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -84,6 +85,7 @@
     <Compile Include="component.cs" />
     <Compile Include="Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CloakUpgradeHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="cyclopscloakingmod.shaders" />
